# shenango

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README  README.md  client.config  dpdk.sh  ixgbe.patch  ixgbe_18_11.patch  ixgbe_19_11.patch  mlx.patch  mlx4_18_11.patch  mlx5_18_11.patch  mlx5_19_11.patch  sample.config  server.config
apps/synthetic/: Cargo.toml
apps/synthetic/.cargo/: config
apps/synthetic/src/: backend.rs  dns.rs  fakework.rs  main.rs  memcache_error.rs  memcache_packet.rs  memcached.rs  payload.rs
base/: base.ld  bitmap.c  cpu.c  init.c  init_internal.h  jenkins_hash.c  list.c  log.c  lrpc.c  mem.c  mempool.c  page.c  pci.c  slab.c  smalloc.c  stat.c  sysfs.c  tcache.c  thread.c  time.c
bindings/rust/: Cargo.toml  build.rs  shenango.h
bindings/rust/.cargo/: config
bindings/rust/src/: ._tcp.rs  ._test_runtime_joinhandle.rs  ._udp.rs  asm.rs  lib.rs  tcp.rs  test_hello.rs  test_runtime_joinhandle.rs  test_runtime_threads.rs  test_smalloc.rs  thread.rs  udp.rs  udp.rs.rej
dune/: dune.h  entry.c  procmap.c  trap.c  trapasm.S  vm.c  vsyscall.S
iokernel/: commands.c  control.c  cores.c  defs.h  dp_clients.c  dpdk.c  main.c  mempool_completion.c  mlx.h  ref.h  rx.c  stat.c  tx.c
ksched/: Kbuild  Makefile  ksched.c  ksched.h
net/: ethdev.c  mbuf.c  mbuf_tc.c  netdump.c
runtime/: cfg.c  chan.c  defs.h  init.c  ioqueues.c  kthread.c  preempt.c  rcu.c  sched.c  smalloc.c  softirq.c  stack.c  stat.c  switch.S  sync.c  timer.c
scripts/: cstate.c  rstat.go  setup_machine.sh  spin.cc
shim/: Makefile  README  entry.c  mem.c  pthread.c  sleep.c  sync.c
tests/: .gitignore  netperf.c  test_base_gen.c  test_base_hello.c  test_base_lrpc.c  test_base_smalloc.c  test_base_thread.c  test_hello.c  test_kthread_attach.c  test_kthread_wakeup.c  test_many_threads.c  (+9 more)
(+133 files in other folders)
