[package]
name = "synthetic"
version = "0.1.0"
authors = ["The Shenango Developers"]

[dependencies]
byteorder = "1"
clap = "2.32.0"
dns-parser = "0.7.1"
libc = "0.2"
lockstep = { git = "https://github.com/fintelia/lockstep.git",  rev = "9be97f6ef9d75b1a28a79734df238c08b4de7013" }
rand = "0.4"
serde = "1.0"
net2 = "0.2"
mersenne_twister = "1.1.1"
shenango = { path = "../../bindings/rust" }

[profile.release]
debug=false
