[package]
name = "shenango"
version = "0.1.0"
authors = ["The Shenango Developers"]

[dependencies]
libc = "0.2"
spin = "0.4.9"
byteorder = "1.2.1"

[build-dependencies]
bindgen = "0.32.1"

[[bin]]
name = "runtime_threads"
path = "src/test_runtime_threads.rs"

[[bin]]
name = "runtime_joinhandle"
path = "src/test_runtime_joinhandle.rs"

[[bin]]
name = "hello"
path = "src/test_hello.rs"

[[bin]]
name = "smalloc"
path = "src/test_smalloc.rs"